src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pan Cards</relationshipLabel>
        <relationshipName>Pan_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_O_B__c</fullName>
        <inlineHelpText>Date Of Birth</inlineHelpText>
        <label>D.O.B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Id__c</fullName>
        <label>Pan Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>